# kameo_remote

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_GUARDS.md  TELL_OPTIMIZATION.md  test_layout  test_output.txt
baselines/: baseline_allocations_2026-01-23_14-11-43.txt  baseline_allocations_2026-01-23_18-59-54.txt  baseline_allocations_2026-01-23_19-00-11.txt
benches/: archived_access.rs
docs/: COMPLIANCE_REPORT.md  DESIGN_TRUTH.md  FEATURE_GUARDS_EXPLAINED.md  GUIDES.md  KEYS.md  RESPONSE_STREAMING.md
examples/: bad_client_stress.rs  batch_ask_echo_server.rs  console_tell_ask_client.rs  console_tell_ask_server.rs  illegal_api_usage.rs.disabled  multi_node.rs  production_guard_test.rs  test_connection_debug.rs  test_gossip_retry.rs  test_guard_demo.rs  test_invalid_keypair.rs  test_kameo_remote_ask.rs  test_keypair_auth.rs  test_manual_a.rs  test_manual_b.rs  test_manual_c.rs  test_tls_basic.rs  test_tls_with_node_id.rs  test_valid_keypair.rs  tls_client.rs
logs/: validation_2026-01-23_06-21-44.txt  validation_2026-01-23_06-35-18.txt  validation_2026-01-23_07-01-27.txt  validation_2026-01-23_07-29-08.txt  validation_2026-01-23_07-53-03.txt  validation_2026-01-23_10-24-45.txt  validation_2026-01-23_10-29-21.txt  validation_2026-01-23_10-42-37.txt  validation_2026-01-23_10-44-07.txt  validation_2026-01-23_10-44-11.txt  validation_2026-01-23_10-46-17.txt  validation_2026-01-23_10-49-10.txt  validation_2026-01-23_10-50-32.txt  validation_2026-01-23_10-55-10.txt  validation_2026-01-23_11-34-17.txt  validation_2026-01-23_11-34-20.txt  validation_2026-01-23_11-36-35.txt  validation_2026-01-23_12-01-26.txt  validation_2026-01-23_14-00-43.txt  validation_2026-01-23_14-05-35.txt  validation_2026-01-23_14-05-38.txt  validation_2026-01-23_14-06-54.txt  validation_2026-01-23_14-08-56.txt  validation_2026-01-23_14-13-42.txt  validation_2026-01-23_18-31-04.txt  validation_2026-01-23_18-33-18.txt  validation_2026-01-23_18-35-03.txt  validation_2026-01-23_18-36-29.txt  validation_2026-01-23_18-42-54.txt  validation_2026-01-23_18-59-04.txt  validation_2026-01-23_19-07-03.txt  validation_2026-01-23_19-07-44.txt  validation_2026-01-23_21-58-35.txt  validation_2026-01-23_22-35-43.txt  validation_2026-01-24_09-16-37.txt  validation_2026-01-24_10-44-12.txt  validation_2026-01-24_10-49-07.txt  validation_2026-01-24_10-50-49.txt  validation_2026-01-24_16-55-17.txt
reports/: allocation_measurements_2026-01-23_14-12-37.txt  allocation_measurements_2026-01-23_14-35-27.txt  allocation_measurements_2026-01-23_14-36-00.txt  coverage.lcov  coverage_gaps_2026-01-24_10-51-14.md
scripts/: README.md  analyze_coverage_gaps.sh  capture_baseline.sh  check_critical_coverage.sh  check_forbidden_copy_patterns.sh  check_no_rkyv_from_bytes.sh  compare_allocations.sh  coverage.sh  full_validation.sh
spec/: BUFFER_SIZE_FIX.md  QA.md  TEST_IMPROVEMENTS_GOSSIP.md
src/: actor_location.rs  aligned.rs  config.rs  connection_pool.rs  dns.rs  framing.rs  gossip_buffer.rs  handle.rs  handle_builder.rs  handshake.rs  lib.rs  migration.rs  net.rs  net_security.rs  peer_discovery.rs  priority.rs  protocol.rs  registry.rs  remote_actor_location.rs  remote_actor_ref.rs  reply_to.rs  rkyv_utils.rs  stream_writer.rs  streaming.rs  telemetry.rs  test_helpers.rs  typed.rs
src/tls/: mod.rs  (+2 more)
tests/: ask_reply_end_to_end.rs  ask_reply_simple.rs  ask_with_lookup_demo.rs  bad_client_stress.rs  batch_ask_performance.rs  batch_ask_simple.rs  body_allocation_baseline.rs  bytemuck_allocation_tests.rs  bytemuck_optimized_tests.rs  connection_handle_critical_paths.rs  connection_lifecycle_test.rs  crypto_security_tests.rs  dns_refresh_on_dial_failure.rs  flow_control.rs  gossip_backoff_e2e.rs  gossip_buffer_tests.rs  gossip_chaos_scheduler.rs  gossip_e2e_tests.rs  gossip_matrix_e2e.rs  gossip_partition_e2e.rs  gossip_partition_invariant_e2e.rs  gossip_removal_e2e.rs  gossip_zero_copy_observability.rs  guard_violation_test.rs  manual_peer_configuration.rs  node_name_test.rs  peer_discovery_tests.rs  peer_discovery_toctou_test.rs  pooled_send_bench.rs  pooled_typed_send.rs  reconnect_bench_e2e.rs  register_actor_sync_multiple_peers.rs  register_actor_sync_real_peers.rs  register_actor_sync_simple.rs  response_streaming.rs  stream_assembly_coverage.rs  streaming_allocation_tests.rs  streaming_contract.rs  streaming_tests.rs  streaming_vs_tell.rs  (+15 more)
(+14 files in other folders)
