[package]
name = "kameo_remote"
version = "0.1.0"
edition = "2021"

[features]
test-helpers = []
io_uring = ["tokio-uring", "io-uring"]
allow-non-zero-copy = []
legacy_tell_bytes = []
legacy_tell_bytes_unlocked = []

[dependencies]
async-trait = "0.1"
bytes = "1.0"
bytemuck = { version = "1.18", features = ["derive"] }
dashmap = "6.1.0"
arc-swap = "1.7"
lru = "0.12"  # LRU cache for known-peers
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
futures = "0.3"
hex = "0.4"
itoa = "1.0"
parking_lot = "0.12"
rand = "0.9.1"
rkyv = { version = "0.8", features = ["bytecheck"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# TLS and cryptographic dependencies
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
data-encoding = "2.5"  # For BASE32 DNS encoding
zeroize = { version = "1.7", features = ["derive"] }  # For secure key handling
x509-parser = "0.16"  # For parsing X.509 certificates
sha2 = "0.10"  # For deterministic NodeId generation fallback

# Platform-specific dependencies for io_uring support
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
tokio-uring = { version = "0.5", optional = true }
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
anyhow = "1.0"
bytes = "1.0"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
