[package]
name = "kameo_remote"
version = "0.1.0"
edition = "2021"

[features]
test-helpers = []

[dependencies]
async-trait = "0.1"
bytes = "1.0"
dashmap = "6.1.0"
lru = "0.12"  # LRU cache for known-peers
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
futures = "0.3"
hex = "0.4"
parking_lot = "0.12"
rand = "0.9.1"
rkyv = { version = "0.8", features = ["bytecheck"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"

# TLS and cryptographic dependencies
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
data-encoding = "2.5"  # For BASE32 DNS encoding
zeroize = { version = "1.7", features = ["derive"] }  # For secure key handling
sha2 = "0.10"  # For deterministic NodeId generation fallback

[dev-dependencies]
anyhow = "1.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
