[package]
name = "kameo_remote"
version = "0.1.0"
edition = "2024"

[features]
test-helpers = []
io_uring = ["tokio-uring", "io-uring"]

[dependencies]
crossbeam-queue = "0.3"
arc-swap = { version = "1.7", features = ["weak"] }
bytes = "1.0"
libc = "0.2"
scc = "3.5.6"
lru = "0.12"  # LRU cache for known-peers
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
futures = "0.3"
hex = "0.4"
rand = "0.9.1"
rkyv = { version = "0.8", features = ["bytecheck"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# TLS and cryptographic dependencies
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
data-encoding = "2.5"  # For BASE32 DNS encoding
zeroize = { version = "1.7", features = ["derive"] }  # For secure key handling
x509-parser = "0.16"  # For parsing X.509 certificates
sha2 = "0.10"  # For deterministic NodeId generation fallback

# Platform-specific dependencies for io_uring support
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
tokio-uring = { version = "0.5", optional = true }
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
anyhow = "1.0"
bytes = "1.0"
criterion = "0.7"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2.5"

[[bench]]
name = "archived_access"
harness = false
